esphome/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome-dep
spec:
  selector:
    matchLabels:
      app: esphome
  replicas: 1
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
      - name: esphome
        image: esphome/esphome:latest
        volumeMounts:
        - name: esphome-config
          mountPath: /config
        ports:
        - containerPort: 6053
      volumes:
      - name: esphome-config
        persistentVolumeClaim:
          claimName: esphome-pvc
