esphome/esphome-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome-service
spec:
  selector:
    app: esphome
  ports:
  - name: esphome
    port: 6053
    targetPort: 6053
