esphome/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome-svc
spec:
  selector:
    app: esphome
  ports:
    - protocol: TCP
      name: esphome
      port: 6053
      targetPort: 6053
      nodePort: 30082
  type: NodePort
