esphome/esphome-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome-ingress
spec:
  rules:
  - host: esphome-k8s.lrsoft.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: esphome-service
            port:
              name: esphome
